2014-07-26  Ramon Casero  <rcasero@gmail.com>

	* matlab/CMakeLists.txt: (0.3.1)
	* Add matlab/FileFormatToolbox/CMakeLists.txt: (0.1.1)

	- We want to compile Matlab function vmu2png.m into a binary that
	we can run from the command line.

2014-07-24  Ramon Casero  <rcasero@gmail.com>

	* matlab/FileFormatToolbox/vmu2png.m (0.2.1)

	- Save 'PixelHeight' and 'PixelWidth' as an "Other" field in the
	PNG image. Although these can be computed from
	e.g. 'PhysicalHeight'and 'YResolution', in case of round-off
	errors we want to have the original value from the microscope too.

	- Fix bug. When path to file was empty (i.e. file is in current
	directory), the function tried to save the PNG to the filesystem's
	root directory '/'.

2014-07-23  Ramon Casero  <rcasero@gmail.com>

	* CMakeLists.txt: (0.9.2)

	- Make gerardus compile for Matlab 2013b on linux. This requires
	Boost 1.49, and g++ 4.7. Thanks to Louie Cardone-Noott, who made
	the original patch for this.

2014-07-10  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/CardiacToolbox/histology_blockface_preprocessing.m (0.1.0)

	- HISTOLOGY_BLOCKFACE_PREPROCESSING Prepare histology and
	blockface for registration.

2014-07-09  Ramon Casero  <rcasero@gmail.com>

	* Rename matlab/CardiacToolbox/correct_blockface_perspective.m as
	matlab/CardiacToolbox/blockface_correct_perspective.m (0.1.0)

	* matlab/CardiacToolbox/blockface_imread_gray.m (0.1.1)

	- Output image volume is now the same class of the images in the
	files, instead of double.

	* matlab/CardiacToolbox/blockface_equalise_illumination.m (0.3.0)

	- Changes in the method. After estimating block surface
	illumination, crop out too little or large illumination
	values. They correspond to interpolation artifacts on the edges,
	and produce a bad equalisation.

	- After equalisation, rescale intensity range so that it matches
	intensity range of the original image.

	- Convert equalised image from double to the type of the input
	image.
